Git_to_Salesforce/ Q-assign/objects/Global_Settings__c.object
<CustomObject>
    <description>It has general settings all over the Q-assign.</description>
    <fields>
        <fullName>General_Notifications_Email_Address__c</fullName>
        <label>General Notifications Email Address</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Scheduler_Master_Switch__c</fullName>
        <defaultValue>(&quot;Off&quot;)</defaultValue>
        <label>Global Scheduler Master Switch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Ortoo_Support_of_errors__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If it is checked, notification emails go to Ortoo support too.</inlineHelpText>
        <label>Notify Ortoo Support of errors</label>
        <type>Checkbox</type>
    </fields>
    <label>QA Global Settings</label>
    <nameField>
        <label>QA Global Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>